undo CMAKE_LIBRARY_PATH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,10 @@ if(FAISS_ENABLE_GPU)
     list(APPEND FAISS_LANGUAGES HIP)
     list(PREPEND CMAKE_MODULE_PATH "/opt/rocm/lib/cmake")
     list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
-    message("CMAKE_LIBRARY_PATH: = ${CMAKE_LIBRARY_PATH}")
-    set(CMAKE_LIBRARY_PATH "/lib/x86_64-linux-gnu/" ${CMAKE_LIBRARY_PATH})
-    set(CMAKE_LIBRARY_PATH "/usr/lib/x86_64-linux-gnu/" ${CMAKE_LIBRARY_PATH})
-    message("CMAKE_LIBRARY_PATH: = ${CMAKE_LIBRARY_PATH}")
+    #message("CMAKE_LIBRARY_PATH: = ${CMAKE_LIBRARY_PATH}")
+    #set(CMAKE_LIBRARY_PATH "/lib/x86_64-linux-gnu/" ${CMAKE_LIBRARY_PATH})
+    #set(CMAKE_LIBRARY_PATH "/usr/lib/x86_64-linux-gnu/" ${CMAKE_LIBRARY_PATH})
+    #message("CMAKE_LIBRARY_PATH: = ${CMAKE_LIBRARY_PATH}")
   else()
     list(APPEND FAISS_LANGUAGES CUDA)
   endif()
