--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -39,7 +39,7 @@ runs:
         if [ "${{ runner.arch }}" = "X64" ]; then
           # TODO: unpin versions for gxx_linux-64 and sysroot_linux-64 and merge it with ARM64 below
           conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
-          conda install -y -q mkl=2023 mkl-devel=2023 
+          conda install -y -q mkl=2023 mkl-devel=2023
         fi
 
 
@@ -67,28 +67,32 @@ runs:
         conda activate
 
         if [ "${{ runner.arch }}" = "X64" ]; then
-          cmake -B build -DBUILD_TESTING=ON \
-            -DBUILD_SHARED_LIBS=ON  \
-            -DFAISS_ENABLE_GPU=${{ inputs.gpu }}  \
-            -DFAISS_ENABLE_RAFT=${{ inputs.raft }}  \
-            -DFAISS_OPT_LEVEL=${{ inputs.opt_level }}  \
-            -DFAISS_ENABLE_C_API=ON  \
-            -DPYTHON_EXECUTABLE=$CONDA/bin/python  \
-            -DCMAKE_BUILD_TYPE=Release  \
-            -DBLA_VENDOR=Intel10_64_dyn \
-            -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
-            .
-        fi
-        if [ "${{ runner.arch }}" = "ARM64" ]; then
-          cmake -B build -DBUILD_TESTING=ON \
-            -DBUILD_SHARED_LIBS=ON  \
-            -DFAISS_ENABLE_GPU=${{ inputs.gpu }}  \
-            -DFAISS_ENABLE_RAFT=${{ inputs.raft }}  \
-            -DFAISS_OPT_LEVEL=${{ inputs.opt_level }}  \
-            -DFAISS_ENABLE_C_API=ON  \
-            -DPYTHON_EXECUTABLE=$CONDA/bin/python  \
-            -DCMAKE_BUILD_TYPE=Release  \
-            .
+          cmake -B build \
+                -DBUILD_TESTING=ON \
+                -DBUILD_SHARED_LIBS=ON  \
+                -DFAISS_ENABLE_GPU=${{ inputs.gpu }}  \
+                -DFAISS_ENABLE_RAFT=${{ inputs.raft }}  \
+                -DFAISS_OPT_LEVEL=${{ inputs.opt_level }}  \
+                -DFAISS_ENABLE_C_API=ON  \
+                -DPYTHON_EXECUTABLE=$CONDA/bin/python  \
+                -DCMAKE_BUILD_TYPE=Release  \
+                -DBLA_VENDOR=Intel10_64_dyn \
+                -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
+                .
+        elif [ "${{ runner.arch }}" = "ARM64" ]; then
+          cmake -B build \
+                -DBUILD_TESTING=ON \
+                -DBUILD_SHARED_LIBS=ON  \
+                -DFAISS_ENABLE_GPU=${{ inputs.gpu }}  \
+                -DFAISS_ENABLE_RAFT=${{ inputs.raft }}  \
+                -DFAISS_OPT_LEVEL=${{ inputs.opt_level }}  \
+                -DFAISS_ENABLE_C_API=ON  \
+                -DPYTHON_EXECUTABLE=$CONDA/bin/python  \
+                -DCMAKE_BUILD_TYPE=Release  \
+                .
+        else
+          echo "Encountered unexpected platform ${{ runner.arch }}"
+          exit 1
         fi
         make -k -C build -j$(nproc)
     - name: C++ tests
