--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: ./.github/actions/build_cmake
         continue-on-error: true # non-blocking mode for now
-      # TODO: uncomment this once SVE PR is merged
+      # TODO(T197096427): uncomment this once SVE PR is merged
       #   with:
       #     opt_level: sve
   linux-x86_64-conda:
