--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -30,7 +30,7 @@ runs:
 
         # install base packages
         conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
-        conda install -y -q python=3.11 cmake make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
+        conda install -y -q python=3.11 cmake make swig mkl=2023 mkl-devel=2023 numpy=2.0 scipy pytest
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
