Address feedback for cmake infra

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,13 @@ if(FAISS_ENABLE_GPU)
   if(USE_ROCM)
     enable_language(HIP)
     add_definitions(-DUSE_ROCM)
+    find_package(HIP REQUIRED)
+    find_package(hipBLAS REQUIRED)
+    set(GPU_EXT_PREFIX "hip")
   else ()
     set(CMAKE_CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
     enable_language(CUDA)
+    set(GPU_EXT_PREFIX "cu")
   endif()
 endif()
 
