--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -141,9 +141,9 @@ endif()
 if(FAISS_ENABLE_GPU)
   if(USE_ROCM)
     find_package(HIP REQUIRED)
-    target_link_libraries(swigfaiss PRIVATE hip::host)
-    target_link_libraries(swigfaiss_avx2 PRIVATE hip::host)
-    target_link_libraries(swigfaiss_avx512 PRIVATE hip::host)
+    target_link_libraries(swigfaiss PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
+    target_link_libraries(swigfaiss_avx2 PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
+    target_link_libraries(swigfaiss_avx512 PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
   else()
     find_package(CUDAToolkit REQUIRED)
     if(FAISS_ENABLE_RAFT)
