--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -25,19 +25,18 @@ runs:
       run: |
         # initialize Conda
         eval "$(conda shell.bash hook)"
-        conda activate
+        conda activate test
         conda config --set solver libmamba
         conda update -y -q conda
 
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 cmake make swig numpy scipy pytest
 
         # install base packages for ARM64
         if [ "${{ runner.arch }}" = "ARM64" ]; then
           # OpenBlas requires a openmp build type (https://github.com/facebookresearch/faiss/issues/3700)
           # conda install -y -q -c conda-forge openblas[build=*openmp*]
-          conda install -y -q -c conda-forge openblas[build!=*pthreads*]  
+          conda install -y -q -c conda-forge openblas[build=*openmp*] 
           conda install -y -q -c conda-forge gxx_linux-aarch64 sysroot_linux-aarch64
         fi
 
@@ -47,6 +46,8 @@ runs:
           conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
           conda install -y -q mkl=2023 mkl-devel=2023
         fi
+
+        conda install -y -q python=3.11 cmake make swig numpy scipy pytest
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
