--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -24,8 +24,10 @@ runs:
       shell: bash
       run: |
         # initialize Conda
-        # conda config --set solver libmamba
+        conda config --set solver libmamba
         conda update -y -q conda
+        conda update --all --yes
+
 
         echo "$CONDA/bin" >> $GITHUB_PATH
 
