--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -159,19 +159,16 @@ endif()
 if(FAISS_ENABLE_GPU)
   if(USE_ROCM)
     find_package(HIP REQUIRED)
-    target_link_libraries(swigfaiss PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
-    target_link_libraries(swigfaiss_avx2 PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
-    target_link_libraries(swigfaiss_avx512 PRIVATE $<$<BOOL:${USE_ROCM}>:hip::host>)
   else()
     find_package(CUDAToolkit REQUIRED)
-    if(FAISS_ENABLE_RAFT)
-      find_package(raft COMPONENTS compiled distributed)
-    endif()
-    target_link_libraries(swigfaiss PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>)
-    target_link_libraries(swigfaiss_avx2 PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>)
-    target_link_libraries(swigfaiss_avx512 PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>)
-    target_link_libraries(swigfaiss_sve PRIVATE CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>)
   endif()
+  if(FAISS_ENABLE_RAFT)
+    find_package(raft COMPONENTS compiled distributed)
+  endif()
+  target_link_libraries(swigfaiss PRIVATE $<$<NOT:${USE_ROCM}>:CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>> $<$<BOOL:${USE_ROCM}>:hip::host>)
+  target_link_libraries(swigfaiss_avx2 PRIVATE $<$<NOT:${USE_ROCM}>:CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>> $<$<BOOL:${USE_ROCM}>:hip::host>)
+  target_link_libraries(swigfaiss_avx512 PRIVATE $<$<NOT:${USE_ROCM}>:CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>> $<$<BOOL:${USE_ROCM}>:hip::host>)
+  target_link_libraries(swigfaiss_sve PRIVATE $<$<NOT:${USE_ROCM}>:CUDA::cudart $<$<BOOL:${FAISS_ENABLE_RAFT}>:raft::raft> $<$<BOOL:${FAISS_ENABLE_RAFT}>:nvidia::cutlass::cutlass>> $<$<BOOL:${USE_ROCM}>:hip::host>)
 endif()
 
 find_package(OpenMP REQUIRED)
