ROCm CMake configuration cleanup (#3716)
Summary:
Pull Request resolved: https://github.com/facebookresearch/faiss/pull/3716

Renaming `USE_ROCM` to `FAISS_ENABLE_ROCM` in CMake files, `FAISS_ENABLE_ROCM` in SWIG files, and `USE_AMD_ROCM` in other source files to follow the existing naming convention.

Differential Revision: D60673731

--- a/c_api/CMakeLists.txt
+++ b/c_api/CMakeLists.txt
@@ -56,7 +56,7 @@ add_executable(example_c EXCLUDE_FROM_ALL example_c.c)
 target_link_libraries(example_c PRIVATE faiss_c)
 
 if(FAISS_ENABLE_GPU)
-  if(USE_ROCM)
+  if(FAISS_ENABLE_ROCM)
     add_subdirectory(gpu-rocm)
   else ()
     add_subdirectory(gpu)
