--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -38,10 +38,9 @@ macro(configure_swigfaiss source)
     set_source_files_properties(${source} PROPERTIES
       COMPILE_DEFINITIONS GPU_WRAPPER
     )
-    if (USE_ROCM)
-      message(USE_ROCM="${USE_ROCM}")
+    if (FAISS_ENABLE_ROCM)
       set_source_files_properties(${source} PROPERTIES
-        COMPILE_DEFINITIONS USE_ROCM
+        COMPILE_DEFINITIONS FAISS_ENABLE_ROCM
       )
     endif()
     if (FAISS_ENABLE_RAFT)
@@ -76,7 +75,7 @@ if(TARGET faiss)
     list(APPEND SWIG_MODULE_swigfaiss_sve_EXTRA_DEPS
       "${faiss_SOURCE_DIR}/faiss/${h}")
   endforeach()
-  if(USE_ROCM)
+  if(FAISS_ENABLE_ROCM)
     foreach(h ${FAISS_GPU_HEADERS})
       list(APPEND SWIG_MODULE_swigfaiss_EXTRA_DEPS
         "${faiss_SOURCE_DIR}/faiss/gpu-rocm/${h}")
@@ -168,14 +167,10 @@ else()
 endif()
 
 if(FAISS_ENABLE_GPU)
-  if(USE_ROCM)
-    find_package(HIP REQUIRED)
-    target_link_libraries(swigfaiss PRIVATE
-      $<$<BOOL:${USE_ROCM}>:hip::host>)
-    target_link_libraries(swigfaiss_avx2 PRIVATE
-      $<$<BOOL:${USE_ROCM}>:hip::host>)
-    target_link_libraries(swigfaiss_avx512 PRIVATE
-      $<$<BOOL:${USE_ROCM}>:hip::host>)
+  if(FAISS_ENABLE_ROCM)
+    target_link_libraries(swigfaiss PRIVATE hip::host)
+    target_link_libraries(swigfaiss_avx2 PRIVATE hip::host)
+    target_link_libraries(swigfaiss_avx512 PRIVATE hip::host)
   else()
     find_package(CUDAToolkit REQUIRED)
     if(FAISS_ENABLE_RAFT)
