--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ set(FAISS_LANGUAGES CXX)
 
 if(FAISS_ENABLE_GPU)
   if (FAISS_ENABLE_ROCM)
-    set(USE_ROCM TRUE)
     list(APPEND FAISS_LANGUAGES HIP)
     list(PREPEND CMAKE_MODULE_PATH "/opt/rocm/lib/cmake")
     list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
@@ -66,9 +65,9 @@ option(FAISS_ENABLE_PYTHON "Build Python extension." ON)
 option(FAISS_ENABLE_C_API "Build C API." OFF)
 
 if(FAISS_ENABLE_GPU)
-  if(USE_ROCM)
+  if(FAISS_ENABLE_ROCM)
     enable_language(HIP)
-    add_definitions(-DUSE_ROCM)
+    add_definitions(-DUSE_AMD_ROCM)
     find_package(HIP REQUIRED)
     find_package(hipBLAS REQUIRED)
     set(GPU_EXT_PREFIX "hip")
@@ -83,15 +82,10 @@ if(FAISS_ENABLE_RAFT AND NOT TARGET raft::raft)
   find_package(raft COMPONENTS compiled distributed)
 endif()
 
-if(USE_ROCM)
-  find_package(HIP REQUIRED)
-  find_package(hipBLAS REQUIRED)
-endif()
-
 add_subdirectory(faiss)
 
 if(FAISS_ENABLE_GPU)
-  if(USE_ROCM)
+  if(FAISS_ENABLE_ROCM)
     add_subdirectory(faiss/gpu-rocm)
   else()
     add_subdirectory(faiss/gpu)
@@ -116,7 +110,7 @@ if(BUILD_TESTING)
   add_subdirectory(tests)
 
   if(FAISS_ENABLE_GPU)
-    if(USE_ROCM)
+    if(FAISS_ENABLE_ROCM)
       add_subdirectory(faiss/gpu-rocm/test)
     else()
       add_subdirectory(faiss/gpu/test)
