trying in a container

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
   format:
     name: Format
     runs-on: faiss-amd-MI200
+    container: ubuntu:22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
