--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
             chmod u+x llvm.sh
             sudo ./llvm.sh 18
             sudo apt-get install -y git-core clang-format-18
+            pwd
+            find . -type d -name 'faiss'
+            find / -type d -name 'faiss'
       - name: Verify clang-format
         run: |
             git ls-files | grep -E  '\.(cpp|h|cu|cuh)$' | xargs clang-format-18 -i
