--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,6 @@ jobs:
               git --no-pager diff --color
               exit 1
             fi
+      - name: Setup tmate session
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
