--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,9 @@ jobs:
             apt-get update && apt-get install -y sudo && apt-get install -y git
       - name: Checkout
         uses: actions/checkout@v4
-      - name: git status
-        run: |
-            git status
       - name: Install clang-format
         run: |
-            apt-get update && apt-get install -y sudo
+            apt-get update
             sudo apt-get update -y
             sudo apt-get install -y wget
             sudo apt install -y lsb-release wget software-properties-common gnupg
