--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
   MKL_THREADING_LAYER: GNU
 jobs:
   linux-x86_64-cmake:
-    name: Linux x86_64 (cmake)
+    name: Linux x86_64 (cmake, docker)
     runs-on: faiss-amd-MI200
     container: ubuntu:22.04
     steps:
@@ -23,6 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: ./.github/actions/build_cmake
-      - name: Setup tmate session
-        if: failure()
-        uses: mxschmitt/action-tmate@v3
+  linux-x86_64-cmake-nocontainer:
+    name: Linux x86_64 (cmake, no-container)
+    runs-on: faiss-amd-MI200
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/build_cmake
