--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
   MKL_THREADING_LAYER: GNU
 jobs:
   linux-x86_64-cmake-1:
-    name: Linux x86_64 (cmake, docker) - 1
+    name: Linux x86_64 (cmake, docker) one
     runs-on: faiss-amd-MI200
     container: ubuntu:22.04
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: Build and Test (cmake)
         uses: ./.github/actions/build_cmake
   linux-x86_64-cmake-2:
-    name: Linux x86_64 (cmake, docker) - 2
+    name: Linux x86_64 (cmake, docker) two
     runs-on: faiss-amd-MI200
     container: ubuntu:22.04
     steps:
