Add labels to test-results file and include ROCm flag (#3738)
Summary: Pull Request resolved: https://github.com/facebookresearch/faiss/pull/3738

Reviewed By: gtwang01

Differential Revision: D60977946

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -163,5 +163,5 @@ runs:
       if: inputs.rocm == 'OFF'
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ runner.arch }}-${{ inputs.opt_level }}-${{ inputs.gpu }}-${{ inputs.raft }}
+        name: test-results-arch=${{ runner.arch }}-opt=${{ inputs.opt_level }}-gpu=${{ inputs.gpu }}-raft=${{ inputs.raft }}-rocm=${{ inputs.rocm }}
         path: test-results
