--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -95,6 +95,12 @@ runs:
         # Cleanup
         sudo apt-get autoclean && sudo apt-get clean
         sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    - name: smi output
+      if: inputs.raft == 'ON' || inputs.rocm == 'ON'
+      shell: bash
+      run: |
+        /opt/rocm-6.1.1/bin/rocm-smi
+        /opt/rocm-6.1.1/bin/amd-smi
     - name: ROCm - Hipify
       if: inputs.rocm == 'ON'
       shell: bash
