Install gpg for ROCm builds (#3744)
Summary:
Pull Request resolved: https://github.com/facebookresearch/faiss/pull/3744

gpg is needed for ROCm builds but does not come with containerized builds. This change add installation of gpg.

Differential Revision: D61007840

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -67,9 +67,9 @@ runs:
       if: inputs.rocm == 'ON'
       shell: bash
       run: |
-        # Update repos and install kmod, wget
+        # Update repos and install kmod, wget, gpg
         sudo apt-get update
-        sudo apt-get install -y kmod wget
+        sudo apt-get install -y kmod wget gpg
 
         # Get UBUNTU version name
         UBUNTU_VERSION_NAME=`cat /etc/os-release | grep UBUNTU_CODENAME | awk -F= '{print $2}'`
